# common

./: CMakeLists.txt  README.md
cmake/: Functions.cmake
desktop-console/: config.cpp  config.h  consumer_filter.cpp  consumer_filter.h  error_metric_counter.cpp  error_metric_counter.h  errors.cpp  errors.h  filter_chain.cpp  filter_chain.h  filter_chain_holder.cpp  filter_chain_holder.h  filter_chain_manager.cpp  filter_chain_manager.h  qdb_connector.cpp  qdb_connector.h
iface/: ApproxIface.h  DbIface.h  DeviceIface.cpp  DeviceIface.h  EmbeddedIface.h  FilterIface.h  ModelIface.h  NativeIface.h  NetIface.h  OpenCLIface.h  SensorIface.h  SignalIface.h  SimpleIface.h  SolverIface.h  SubjectIface.h  UIIface.h  guid.h  referencedIface.h
lang/: dstrings.cpp  dstrings.h
resource/: commonversion.rc
rtl/: AlignmentAllocator.h  ApproxLib.cpp  ApproxLib.h  Buffer_Pool.h  CLibrary.cpp  CLibrary.h  Common_Calculated_Signal.cpp  Common_Calculated_Signal.h  Common_Calculation.cpp  Common_Calculation.h  Concurrent_Stack.h  DbLib.cpp  DbLib.h  DeviceLib.cpp  DeviceLib.h  Dynamic_Library.cpp  Dynamic_Library.h  Eigen_Buffer.h  Eigen_Buffer_Pool.h  EmbeddedLib.cpp  FactoryLib.cpp  FactoryLib.h  FilesystemLib.cpp  FilesystemLib.h  FilterLib.cpp  FilterLib.h  LogicalClockImpl.h  ModelsLib.h  SensorLib.cpp  SensorLib.h  SolverLib.cpp  SolverLib.h  UILib.cpp  UILib.h  descriptor_utils.h  guid.cpp  guid.h  hresult.c  hresult.h  manufactory.h  (+10 more)
scgms/iface/: DeviceIface.h  FilterIface.h  SimpleIface.h  SolverIface.h  UIIface.h  referencedIface.h
scgms/lang/: dstrings.cpp
scgms/rtl/: AlignmentAllocator.h  ApproxLib.cpp  Common_Calculated_Signal.cpp  DbLib.cpp  DbLib.h  DeviceLib.cpp  DeviceLib.h  Dynamic_Library.cpp  Dynamic_Library.h  Eigen_Buffer.h  EmbeddedLib.cpp  FilesystemLib.cpp  FilesystemLib.h  FilterLib.cpp  ModelsLib.h  SolverLib.cpp  SolverLib.h  UILib.cpp  UILib.h  guid.cpp  guid.h  manufactory.h  qdb_connector.h  rattime.cpp  rattime.h  referencedImpl.h  scgmsLib.cpp  scgmsLib.h
scgms/utils/: ConvertUTF.cpp  DebugHelper.h  NetworkStructures.cpp  QtUtils.h  SimpleIni.h  descriptor_utils.h  math_utils.cpp  math_utils.h  optionparser.h  string_utils.cpp  string_utils.h
scgms/utils/drawing/: Drawing.cpp  Drawing.h  IRenderer.h  SVGRenderer.cpp  SVGRenderer.h
solver/: NullMethod.h  dispatcher.h  fitness.h  solution.h
to reconsider/iface/: LogicalClockIface.h  SensorIface.h  SubjectIface.h  referencedIface.h
to reconsider/rtl/: LogicalClockImpl.cpp  referencedImpl.h
utils/: ConvertUTF.h  DebugHelper.cpp  DebugHelper.h  NetworkStructures.cpp  NetworkStructures.h  QtUtils.cpp  QtUtils.h  SimpleIni.h  XMLParser.h  descriptor_utils.h  filesystem.hpp  math_utils.cpp  math_utils.h  net_utils.cpp  net_utils.h  string_utils.cpp  string_utils.h  system_utils.cpp  system_utils.h  winapi_mapping.c  winapi_mapping.cpp  winapi_mapping.h
utils/drawing/: Drawing.cpp  Drawing.h  IRenderer.h  SVGRenderer.cpp  SVGRenderer.h
